<?xml version="1.0"?>
<package format="2">
  <name>tf2_broadcaster</name>
  <version>0.1.0</version>
  <description>tf2 broadcaster from map frame to drone frame</description>
  <maintainer email="nicolas.francinelli@eleves.ec-nantes.fr">Nicolas Francinelli</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libegl-dev</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rmw_implementation</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rmw_implementation</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
